@@ -78,6 +78,7 @@
 			<animation condition="SubString(Container(9000).NumItems,4)" effect="slide" end="468,0" time="0">conditional</animation>
 			<animation condition="SubString(Container(9000).NumItems,5)" effect="slide" end="361,0" time="0">conditional</animation>
 			<animation condition="SubString(Container(9000).NumItems,6)" effect="slide" end="254,0" time="0">conditional</animation>
+			<animation condition="SubString(Container(9000).NumItems,7)" effect="slide" end="147,0" time="0">conditional</animation>
             <control type="list" id="9000">
                 <posx>0</posx>
                 <posy>0</posy>
@@ -155,6 +156,14 @@
                         <onclick>ActivateWindow(pictures)</onclick>
                     </item>
 					<item>
+						<visible>!Skin.HasSetting(hidePrograms)</visible>
+                        <label>0</label>
+                        <label2></label2>
+                        <thumb>-</thumb>
+                        <onclick>ActivateWindow(programs,addons,return)</onclick>
+                    </item>
+					<item>
+						<visible>!Skin.HasSetting(hideSearch)</visible>
                         <label>137</label>
                         <label2></label2>
                         <thumb>-</thumb>
