@@ -43,6 +43,7 @@
         <value condition="Window.IsActive(pvr) + [Control.IsVisible(11) | Control.IsVisible(13)]">$LOCALIZE[31006] [COLOR accented]$LOCALIZE[19163][/COLOR]</value>
 		<value condition="Window.IsActive(pvr) + Control.IsVisible(12)">$LOCALIZE[19024] [COLOR accented]$LOCALIZE[31078][/COLOR]</value>        
 		<value condition="!isEmpty(container.foldername)">$INFO[container.foldername]</value>
+		<value>$LOCALIZE[14022]</value>
     </variable>
     <variable name="listSubTitle">
         <value condition="Window.IsActive(videolibrary) + SubString(skin.string(showRecentVideoItems),true)">$LOCALIZE[31013]</value>
@@ -53,14 +54,13 @@
     <!--list view item detail / subheader-->
     <variable name="itemDetail">
         <value condition="Container.Content(movies)">$INFO[Listitem.duration,,$LOCALIZE[31018]] • $VAR[itemResolution] $INFO[ListItem.VideoResolution]</value>
-        <value condition="Container.Content(tvshows)">$INFO[ListItem.Property(TotalEpisodes)] $LOCALIZE[20360]</value>
-        <value condition="Container.Content(seasons)">$INFO[ListItem.Property(UnWatchedEpisodes)] $LOCALIZE[16101]</value>
+        <value condition="Container.Content(tvshows)">$INFO[ListItem.Property(UnWatchedEpisodes)] $LOCALIZE[16101]</value>
+        <value condition="Container.Content(seasons)">$INFO[ListItem.Property(UnWatchedEpisodes),, $LOCALIZE[16101]]</value>
         <value condition="Container.Content(artists)">$INFO[ListItem.Property(Artist_Genre)]</value>
 		<value></value>
     </variable>
     <!--SD / HD value (thanks 'Black!)-->
     <variable name="itemResolution">
-        <value condition="SubString(ListItem.FileNameAndPath,.3D.) | SubString(ListItem.FileNameAndPath,-3D.)">$LOCALIZE[31129]</value>
         <value condition="IntegerGreaterThan(ListItem.VideoResolution,719)">$LOCALIZE[31127]</value>
         <value condition="!IsEmpty(ListItem.VideoResolution)">$LOCALIZE[31128]</value>
     </variable>
