@@ -158,14 +158,28 @@
                     <onclick>Skin.ToggleSetting(hidePictures)</onclick>
                     <selected>Skin.HasSetting(hidePictures)</selected>
                 </control>
-                <control type="radiobutton" id="11">
+				<control type="radiobutton" id="11">
+                    <description>Hide Search</description>
+                    <width>16-col</width>
+                    <label>31150</label>
+                    <onclick>Skin.ToggleSetting(hideSearch)</onclick>
+                    <selected>Skin.HasSetting(hideSearch)</selected>
+                </control>
+				<control type="radiobutton" id="12">
+                    <description>Hide Programs</description>
+                    <width>16-col</width>
+                    <label>31151</label>
+                    <onclick>Skin.ToggleSetting(hidePrograms)</onclick>
+                    <selected>Skin.HasSetting(hidePrograms)</selected>
+                </control>
+                <control type="radiobutton" id="13">
                     <description>Enable Debug Grid</description>
                     <width>16-col</width>
                     <label>31034</label>
                     <onclick>Skin.ToggleSetting(DebugGrid)</onclick>
                     <selected>Skin.HasSetting(DebugGrid)</selected>
                 </control>
-                <control type="radiobutton" id="12">
+                <control type="radiobutton" id="14">
                     <description>Disable Debug Info</description>
                     <width>16-col</width>
                     <label>31035</label>
